Entropy: introduced computation by memory section and refactored code